# netbox-config-diff

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: commit.yaml  mkdocs.yaml  netbox.yaml  publish.yaml
changelog/: index.html
colliecting-diffs/: index.html
configuratiom-management/: index.html
contributing/: index.html
development/: .env  Dockerfile  configuration.py  docker-compose.yaml
docs/: changelog.md  colliecting-diffs.md  configuratiom-management.md  index.md  screenshots.md  secrets.md  usage.md
netbox_config_diff/: __init__.py  choices.py  constants.py  filtersets.py  forms.py  graphql.py  jobs.py  models.py  navigation.py  search.py  tables.py  urls.py  views.py
netbox_config_diff/api/: serializers.py  urls.py  views.py
netbox_config_diff/compliance/: base.py  models.py  secrets.py  sros.py  utils.py
netbox_config_diff/configurator/: base.py  exceptions.py  factory.py  platforms.py  utils.py
netbox_config_diff/forms/: __init__.py  base.py  general.py
netbox_config_diff/graphql/: __init__.py  base_filters.py  enums.py  filters.py  schema.py  types.py
netbox_config_diff/graphql/new/: filters.py  schema.py  types.py
netbox_config_diff/graphql/old/: schema.py
netbox_config_diff/migrations/: 0001_initial.py  0002_add_script.py  0003_configcompliance_actual_config_and_more.py  0004_update_script.py  0005_configcompliance_extra_missing.py  0006_substitute.py  0007_configurationrequest.py  0008_alter_configcompliance_device.py  0009_configcompliance_patch.py  0010_create_script.py  0011_configurationrequest_owner.py
netbox_config_diff/models/: __init__.py  base.py  data_models.py  models.py
netbox_config_diff/scripts/: config_diff.py
netbox_config_diff/static/netbox_config_diff/: diff2html.dark.min.css  diff2html.min.css
netbox_config_diff/templates/netbox_config_diff/: configcompliance.html  configurationrequest.html  platformsetting.html  substitute.html
netbox_config_diff/templates/netbox_config_diff/configcompliance/: base.html  config.html  data.html  missing_extra.html  patch.html
netbox_config_diff/templates/netbox_config_diff/configurationrequest/: base.html  diffs.html
netbox_config_diff/templates/netbox_config_diff/inc/: commands_card.html  diff.html  job_log.html
netbox_config_diff/templatetags/: string_filters.py
netbox_config_diff/views/: __init__.py  base.py  compliance.py  configuration.py
requirements/: base.txt  dev.txt  docs.txt  publish.txt  test.txt
screenshots/: index.html
search/: search_index.json
secrets/: index.html
tests/: conftest.py  factories.py  test_compliance.py  test_compliance_utils.py  test_configurtion_request.py  test_secrets.py  test_sros.py  test_urls.py
tests/fixtures/sros/: expected_diff.txt  expected_patch.txt  intended_config.txt  running_config.txt
