[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools",
  "wheel",
]

[project]
name = "netbox-config-diff"
description = "Push rendered device configurations from NetBox to devices and apply them."
readme = "README.md"
keywords = [
  "netbox",
  "netbox-plugin",
  "automation",
  "network",
  "network-automation",
  "configuration-compliance",
]
requires-python = ">=3.10"
classifiers = [
  "Framework :: Django",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
license = { file = "LICENSE" }
authors = [
  {email = "miaow2@yandex.ru"},
  {name = "Artem Kotik"}
]
dynamic = [
  "dependencies",
  "optional-dependencies",
  "version",
]

[project.urls]
repository = "https://github.com/miaow2/netbox-config-diff/"
homepage = "https://miaow2.github.io/netbox-config-diff/"
documentation = "https://miaow2.github.io/netbox-config-diff/"

[tool.setuptools.packages]
find = {}

[tool.setuptools.dynamic]
version = { attr = "netbox_config_diff.__version__" }
dependencies = {file = ["requirements/base.txt"]}
optional-dependencies.dev = { file = ["requirements/dev.txt"] }
optional-dependencies.test = { file = ["requirements/test.txt"] }

[tool.ruff]
exclude = ["migrations", "__pycache__"]
select = ["C", "E", "F", "I"]
ignore = ["C901"]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
addopts = "-p no:warnings -vv --no-migrations"
DJANGO_SETTINGS_MODULE = "netbox.settings"
pythonpath = ["/opt/netbox/netbox"]
